--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 boto3==1.35.68
-opencv-python==4.11.0  
+opencv-python>=4.11.0
 layoutparser==0.3.4
 langdetect  
 matplotlib==3.9.2
@@ -7,10 +7,11 @@ numpy==2.1.3
 pandas==2.2.3
 Pillow==11.1.0 
 pymupdf==1.25.1
-regex==2.5.148
+regex>=2.5.148
 scipy==1.14.1
 tabulate==0.9.0
 tqdm==4.67.0
 PyYAML==6.0.2
 mlflow==2.21.0
 pygit2==1.17.0
+dotenv >= 1.1.0
