find boreprofile keyword lines

--- a/matching_params.yml
+++ b/matching_params.yml
@@ -31,10 +31,8 @@ table_of_contents:
 boreprofile:
   en:
     - borehole profile
-    - borehole log
+    - boreprofile
     - borehole
-    - borehole diagram
-    - borehole cross section
   de:
     - bohrprofil
     - bohrlochprofil
