--- a/config/layoutlmv3_config.yaml
+++ b/config/layoutlmv3_config.yaml
@@ -9,9 +9,9 @@ val_folder_path: "data/single_pages_splits/val"
 ground_truth_file_path: "data/gt_single_pages.json"
 
 # Training hyperparameters
-batch_size: 32
-num_epochs: 32
-learning_rate: 1e-3
+batch_size: 8
+num_epochs: 1 #16
+learning_rate: 3e-3 #1e-4 #1e-3
 weight_decay: 0.001
 warmup_ratio: 0.1
 #lr_scheduler_type: "cosine"
@@ -21,6 +21,8 @@ max_grad_norm: 5.0
 #custom parameters
 unfreeze_layers:
   - "classifier"
+  - "rel_pos_encoder"
+  # - "layer_11"
 
 # Inference parameters
 inference_batch_size: 32
