calculate needed scale for downscaling

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,5 @@
 MLFLOW_TRACKING=True
 MLFLOW_TRACKING_URI="http://localhost:5000"
+
+AWS_MODEL_ID="your_model_id"
+AWS_MODEL_REGION="anthropic_region"
