--- a/config/xgboost_config.yml
+++ b/config/xgboost_config.yml
@@ -1,8 +1,5 @@
-# === rf_config.yaml ===
-model_type: random_forest
-output_dir: models/random_forest
+model_type: xgboost
 
-# Data parameters
 train_folder_path: "data/single_pages_splits/train"
 val_folder_path: "data/single_pages_splits/val"
 ground_truth_file_path: "data/gt_single_pages.json"
@@ -27,20 +24,21 @@ feature_names:
   - non_grid_length_sum
   - angle_entropy
 
-# Model hyperparameters
 hyperparameters:
-  max_features: "sqrt"
   n_estimators: 100
-  min_samples_split: 2
-  random_state: 42
+  max_depth: 6
+  learning_rate: 0.1
+  subsample: 0.8
+  colsample_bytree: 0.8
+  eval_metric: mlogloss
 
 tuning:
-  n_iter: 20
-  scoring: "f1_micro"
-  cv: 3
   param_grid:
-    n_estimators: [50, 100, 150, 200, 250]
-    max_depth: [10, 15, 20, 25, 30]
-    max_features: ["sqrt", "log2"]
-    min_samples_split: [2, 5, 10]
-    min_samples_leaf: [1, 2, 4]
+    n_estimators: [100, 200, 300, 400]
+    max_depth: [3, 5, 7, 10]
+    learning_rate: [0.01, 0.05, 0.1, 0.3]
+    subsample: [0.6, 0.8, 1.0]
+    colsample_bytree: [0.6, 0.8, 1.0]
+    gamma: [0, 1, 5]
+    reg_alpha: [0, 0.1, 0.5]
+    reg_lambda: [1, 1.5, 2.0]
