--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "swissgeol-assets-dataextraction"
 version = "0.1.0"
-description = "Python project for goelogical document analysis."
+description = "Python project for geological document analysis."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
@@ -36,7 +36,7 @@ dependencies = [
     "xgboost>=3.0.2,<4.0.0",
     "pytest>=8.4.1,<9.0.0",
     "fasttext>=0.9.3,<0.10.0",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv>=1.1.1,<2.0.0"
 ]
 
 [tool.ruff]
@@ -44,13 +44,7 @@ line-length = 119
 
 [tool.ruff.lint]
 select = ["D", "E", "F", "UP", "B", "SIM", "I"]
-ignore = ["D102", "D105", "D107"]
+ignore = ["D102", "D105", "D107", "D100"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
-
-ignore = [
-    "D102",  # Missing docstring in a public method
-    "D105",  # Missing docstring in magic method
-    "D107",  # Missing docstring in `__init__`
-    ]
