--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,5 @@ MLFLOW_TRACKING_URI="http://localhost:5000"
 
 AWS_MODEL_ID="your_model_id"
 AWS_MODEL_REGION="anthropic_region"
+
+FASTTEXT_MODEL_PATH = "path_to_FastText_model"
