--- a/prompts/classification_prompts.yml
+++ b/prompts/classification_prompts.yml
@@ -33,7 +33,7 @@ v0:
 
   user_prompt: |
     Now classify the following page. Respond with ONE of:
-    BOREHOLE, TEXT, MAPS, GEO_PROFILE, DIAGRAM, TABLE, TITLE, or UNKNOWN
+    BOREHOLE, TEXT, MAPS, TITLE, or UNKNOWN
 
 # best perfoming !
 v1:
@@ -50,20 +50,6 @@ v1:
        - Schematic stratigraphy columns
        - Soil logs, lithological records, or subsurface layer descriptions
     - **MAPS**: Pages showing topographic or geological maps with scales, coordinates, or terrain.
-    - **GEOPROFILE**: Geological cross-sections or longitudinal profiles, e.g.:
-        - Horizontal axis showing location markers or distances (e.g. kilometers)
-        - Vertical profiles of stratigraphy or terrain layers across multiple sites
-        - Often shows **connected boreholes** or terrain profiles with labels like "Humus", "Sand", "Clay", or units in meters
-        - May contain measurement data aligned with map coordinates
-    
-    - **DIAGRAM**: Scientific or engineering 2D graphs and schematics, such as:
-        - Line plots, pie/bar charts, stress-strain diagrams, or block models
-        - Abstract or symbolic rather than geographic
-        - Example: tectonic fracture pattern diagrams
-    
-    - **TABLE**: Clearly structured rows and columns of numerical or text data **not** showing borehole stratigraphy. For example:
-        - Groundwater levels, survey measurements, or summary data
-        - Often includes labeled rows/columns, units, and numerical repetition
     - **UNKNOWN**: Any other layout, including tables, mixed content, or unclear structure.
 
     Rules:
@@ -93,45 +79,36 @@ v1.1:
     You are a document layout classification expert.
 
     Your task is to analyze the **visual layout** and **content structure** of a scanned PDF page and classify it into **exactly one** of the following categories:
-
+    
     - **TITLE**: Sparse cover pages with centered titles, project metadata, document numbers, or author/date information. Often no body content.
-    
     - **TEXT**: Pages filled with narrative text or paragraphs in structured format (single or multi-column). Minimal graphical or tabular content.
-    
     - **BOREHOLE**: Borehole log pages presenting drilling data and stratigraphy. These include:
         - Vertical depth intervals (e.g., "0.00–1.50 m: brown clay")
         - Lithological descriptions
         - Tabular or column-style layouts often aligned vertically
         - Focus is on one borehole at a time
-
     - **MAPS**: Pages showing topographic or geological maps with terrain, contours, legend, or coordinate grids. Often raster-style or hand-drawn maps with geographic reference.
-
     - **GEO_PROFILE**: Geological cross-sections or longitudinal profiles, e.g.:
         - Horizontal axis showing location markers or distances (e.g. kilometers)
         - Vertical profiles of stratigraphy or terrain layers across multiple sites
         - Often shows **connected boreholes** or terrain profiles with labels like "Humus", "Sand", "Clay", or units in meters
         - May contain measurement data aligned with map coordinates
-    
     - **DIAGRAM**: Scientific or engineering 2D graphs and schematics, such as:
         - Line plots, pie/bar charts, stress-strain diagrams, or block models
         - Abstract or symbolic rather than geographic
         - Example: tectonic fracture pattern diagrams
-    
     - **TABLE**: Clearly structured rows and columns of numerical or text data **not** showing borehole stratigraphy. For example:
         - Groundwater levels, survey measurements, or summary data
         - Often includes labeled rows/columns, units, and numerical repetition
 
-    - **UNKNOWN**: All other layouts not clearly matching the above, including:
-        - Mixed or partial structures
-        - Diagrams or data that's too ambiguous or low quality to categorize confidently
-        - Sketches, handwritten notes, or illegible scans
+    - **UNKNOWN**: All other layouts not clearly matching the above, mixed content, or unclear structure.
 
     Classification Rules:
     - If a diagram shows **connected underground layers over a horizontal axis**, it's a **GEO_PROFILE**.
     - If it's a **vertical column of one borehole** with material types, it's a **BOREHOLE**.
     - If you see **axes, symbols, and scientific plotting**, it's a **DIAGRAM**.
     - If the page has just text and no structure, use **TEXT**.
-    - If the structure is ambiguous or overlaps multiple categories, return **UNKNOWN**.
+    - If the structure is ambiguous not matching the previous categories, return **UNKNOWN**.
 
     Return the **exact category name** only: no extra words or punctuation.
 
@@ -139,8 +116,7 @@ v1.1:
     - "Example pages for some categories:"
     - "1. TITLE — Sparse, centered document metadata:"
     - "@title"
-    - "2. TEXT — Full paragraphs of narrative content:"
-    - "@text"
+    - "2. TEXT — Full paragraphs of narrative content"
     - "3. BOREHOLE — Vertical depth log with material types:"
     - "@borehole"
     - "4. MAPS — Geographic or geological terrain maps:"
@@ -149,8 +125,7 @@ v1.1:
     - "@geo_profile"
     - "6. DIAGRAM — Scientific graphs or schematic drawings:"
     - "@diagram"
-    - "7. TABLE — Tabular numeric/textual data (not boreholes):"
-    - "@table"
+    - "7. TABLE — Tabular numeric/textual data (not boreholes)"
     - "8. UNKNOWN — Unclear, mixed, or noisy content:"
     - "@unknown"
 
