--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /evaluation/
 /mlruns/
 /mlartifacts/
-/models/
+/models/FastText
+/build/
 
 # Jupyter notebook checkpoints
 .ipynb_checkpoints/
@@ -26,6 +27,9 @@ env/
 
 # Environment files
 .env
+/.env*
 !*.env.template
 
 .DS_Store
+
+/tmp
