--- a/config/randomforest_config.yml
+++ b/config/randomforest_config.yml
@@ -29,9 +29,11 @@ feature_names:
 
 # Model hyperparameters
 hyperparameters:
-  max_features: "sqrt"
-  n_estimators: 100
+  max_features: "log2"
+  n_estimators: 150
   min_samples_split: 2
+  max_depth: 30
+  min_samples_leaf: 1
   random_state: 42
 
 tuning:
