--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dependencies = [
     "python-dotenv>=1.1.1,<2.0.0",
     "fasttext-predict>=0.9.2.4,<0.10.0.0",
     "torch>=2.7.1,<3.0.0",
-    "transformers>=4.54.0,<5.0.0"
+    "transformers>=4.54.0,<5.0.0",
+    "quads==1.1.0",
 ]
 
 [project.optional-dependencies]
