Add local configuration option for API; refactor Dockerfile to use multistage build for faster builds

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,13 @@ AWS_MODEL_ID="your_model_id"
 AWS_MODEL_REGION="anthropic_region"
 
 FASTTEXT_MODEL_PATH = "path_to_FastText_model"
+
+S3_BUCKET="asset-sg"
+S3_FOLDER="asset-sg/"
+
+
+# set USE_LOCAL to True and the local configs to use a local S3 instance
+# USE_LOCAL=False
+# LOCAL_S3_ENDPOINT="http://localhost:9000"
+# LOCAL_S3_ACCESS_KEY=minioadmin
+# LOCAL_S3_SECRET_KEY=miniosecret
