ruff format + remove deprecated stage names in ruff hook id

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
       # Run the linter.
       - id: ruff
         args: [ --fix ]
-        stages: [commit]
+        stages: [pre-commit]
       # Run the formatter.
       - id: ruff-format
-        stages: [commit]
+        stages: [pre-commit]
