add configuration for development and api stable prediction profile

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
-MLFLOW_TRACKING=False
+MLFLOW_TRACKING=false
 MLFLOW_TRACKING_URI="http://localhost:5000"
+
+PREDICTION_PROFILE= "config/prediction_profile.api-stable.yaml"
 
 AWS_MODEL_ID="your_model_id"
 AWS_MODEL_REGION="anthropic_region"
