--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 MLFLOW_TRACKING=false
 MLFLOW_TRACKING_URI="http://localhost:5000"
 
-PREDICTION_PROFILE= "config/prediction_profile.api-stable.yaml"
+# Output mode: 'stable' or 'dev'
+PREDICTION_PROFILE=stable
 
 AWS_MODEL_ID="your_model_id"
 AWS_MODEL_REGION="anthropic_region"
