--- a/config/pixtral_config.yml
+++ b/config/pixtral_config.yml
@@ -9,8 +9,15 @@ diagram_img_path: "examples/example_diagram_250_3.png"
 table_img_path: "examples/example_table_11380_6.png"
 unknown_img_path: "examples/example_unknown_10299_24.png"
 
-prompt_version: v1.2 # current best is v1
+prompt_version: v1.3 # current best is v1.3
+# document size limits
 max_document_size_mb: 4.5
 slack_size_mb: 0.2
-max_tokens: 200
+# conversation generation
+max_tokens: 5
 temperature: 0.2
+# throttling
+qps: 3.0
+max_retries: 6
+backoff_base: 0.4
+backoff_cap: 8.0
