--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /evaluation/
 /mlruns/
 /mlartifacts/
-/models/FastText
+/models/*
+!/models/xgboost/stable
 /build/
 
 # Jupyter notebook checkpoints
