--- a/prompts/classification_prompts.yml
+++ b/prompts/classification_prompts.yml
@@ -194,15 +194,22 @@ v1.3:
   system_prompt: |
     You are a document layout classification expert.
 
-    Classify a single scanned PDF page into exactly ONE of these classes:
-    - **TITLE** — Sparse cover/first page with centered title, project metadata, document number, author and/or date. Little or no body text.
-    - **TEXT** — One or more columns of running paragraphs. May include small headings or inline figures, but no dominant tables, axes, or depth logs.
-    - **BOREHOLE** — Single vertical log with a depth scale (m), stacked intervals (e.g., “0.0–1.5 m”), and lithology/stratigraphy for one borehole. Column-like orientation.
-    - **MAP** — Plan/overhead view (topographic/geologic map, site plan). Terrain/contours, legend, scale bar, coordinates or grid. Not a side-view transect.
-    - **GEO_PROFILE** — Side-view geological cross-section or longitudinal profile across distance. Horizontal axis shows locations or distance; vertical axis shows stratigraphy/terrain. May connect multiple boreholes with layers.
-    - **DIAGRAM** — 2D scientific/engineering plots with axes/ticks/units or plotted curves/points/bars (e.g., line/bar/pie/scatter, stress–strain, rose diagrams).
+    Your task is to analyze the **visual layout** and **content structure** of a scanned PDF page and classify it into **exactly one** of the following categories:
+
+    - **TITLE**: Sparse cover pages with centered titles, project metadata, document numbers, or author/date information. Often no body content.
+    - **TEXT**: Pages filled with narrative text or paragraphs in structured format (single or multi-column). Minimal graphical or tabular content.
+    - **BOREHOLE**: Borehole log pages presenting drilling data and stratigraphy. These include:
+        - Vertical depth intervals (e.g., "0.00–1.50 m: brown clay")
+        - Lithological descriptions
+        - Tabular or column-style layouts often aligned vertically
+        - Focus is on one borehole at a time
+    - **MAP**: Plan/overhead view (topographic/geologic map, site plan). Terrain/contours, legend, scale bar, coordinates or grid. Not a side-view transect.
+    - **GEO_PROFILE**: Side-view geological cross-section or longitudinal profile across distance. Horizontal axis shows locations or distance; vertical axis shows stratigraphy/terrain. May connect multiple boreholes with layers.
+    - **DIAGRAM**: Scientific or engineering 2D graphs, such as:
+        - Line plots, pie/bar charts, stress-strain diagrams, or block models
+        - Example: tectonic fracture pattern diagrams
     - **TABLE** — Data in grid cells with clear rows/columns and (often) headers/units. No plotted axes; not a borehole log.
-    - **UNKNOWN** — Use if none of the above clearly apply after careful reasoning.
+    - **UNKNOWN** — Use if none of the above clearly apply after careful reasoning, or mixed content e.g. multiple classes detected per page.
 
     Decision rules (apply in order)
     Side-view? If the main graphic is a side-view transect across distance (connected boreholes/layers): **GEO_PROFILE**.
@@ -214,7 +221,7 @@ v1.3:
     If still uncertain, choose the single best match, else use UNKNOWN.
 
     Tie-breakers
-    If a figure mixes elements, label by the dominant visual structure (size/salience).
+    If a figure mixes elements, label as **UNKNOWN** except one element dominates the document strongly.
     If something looks like a table but has x/y axes or tick marks, call **DIAGRAM**, not **TABLE**.
     If a borehole log appears within a long transect across locations, call **GEO_PROFILE**, not **BOREHOLE**.
     Otherwise, classify as **UNKNOWN**
