scale detection in diagram classification for baseline

--- a/config/matching_params.yml
+++ b/config/matching_params.yml
@@ -322,3 +322,66 @@ title_page:
   it:
     - rapporto
     - progetto
+
+diagram:
+  en:
+    - diagram
+    - curve
+    - distribution
+    - histogram
+    - summation curve
+    - cumulative curve
+    - grading curve
+  de:
+    - kurve
+    - diagramm
+    - kornverteilung
+    - histogramm
+    - summationskurve
+    - körnungslinie
+    - verteilungskurve
+  fr:
+    - diagramme
+    - courbe
+    - distribution
+    - histogramme
+    - courbe de sommation
+    - courbe granulométrique
+  it:
+    - diagramma
+    - curva
+    - distribuzione
+    - istogramma
+    - curva cumulativa
+    - curva granulometrica
+
+units:
+  - m
+  - cm
+  - mm
+  - µm
+  - nm
+  - km
+  - g
+  - kg
+  - mg
+  - t
+  - mol
+  - mol/l
+  - mol/m3
+  - kg/m3
+  - g/cm3
+  - °c
+  - k
+  - pa
+  - kpa
+  - mpa
+  - bar
+  - l
+  - ml
+  - l/s
+  - m/s
+  - s
+  - sec
+  - h
+  - ora
